--- a/style.css
+++ b/style.css
@@ -64,9 +64,8 @@ li:hover{
 /*main section start*/
 .img-main2{
     height: 200px;
-    border-radius: 50%;
     border: 3px solid rgba(255, 99, 71, 0.664);
-
+    border-radius: 50%;
 }
 main{
     display: flex;
@@ -110,4 +109,10 @@ text-align: center;
    width: 300px;
    border-radius: 8px;
 
+}
+.copy{
+    text-align: center;
+    color: white;
+    background-color: black;
+    padding: 10px;
 }
